// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render an <input> without register 1`] = `
<div>
  <input
    class="input input-bordered"
    placeholder="test-input"
  />
</div>
`;

exports[`Input renders an <input> with label 1`] = `
<div>
  <div
    class="form-control"
  >
    <label
      class="label"
    >
      <span
        class="label-text"
      >
        Test
      </span>
    </label>
    <input
      class="input input-bordered"
      name="test"
      placeholder="test"
    />
  </div>
</div>
`;

exports[`Input renders an <input> with name 1`] = `
<div>
  <div
    class="form-control"
  >
    <input
      class="input input-bordered"
      name="test"
      placeholder="test"
    />
  </div>
</div>
`;
